regler le fonctionnement de contact

--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
           </div>
           <div class="input-box">
             <input type="number" placeholder="Number Phone" id="phone" />
+            <input type="text" placeholder="Subject" id="subject" />
           </div>
         </div>
         <hr class="line" />
