ajouter le lien de mon cv en donwload

--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
           <a href="#"><i class="bx bxl-whatsapp"></i></a>
         </div>
         <div class="btn-group">
-          <a href="#" class="btn">Download CV</a>
+          <a
+            href="https://drive.google.com/uc?export=download&id=1sdpCvTaO3XUrFr5ln_X2cErDHf_ZDo90"
+            class="btn"
+            download
+            >Download CV</a
+          >
           <a href="#contact" class="btn">Contact</a>
         </div>
       </div>
